tests/reliability/reject/lex_bad_dedent.keel
def main(sys: System); Io:
    if true:
        println("a")
      println("b")
